--- a/css/blog.css
+++ b/css/blog.css
@@ -7,7 +7,6 @@ nav a:hover {
     border-bottom: 2px solid green;
 }
 
-
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #e5e5e5;
@@ -20,6 +19,14 @@ nav a:hover {
 @media (min-width: 500px) {
     .blog-header-logo {
       font-size: 2.5rem;
+    }
+    
+    .main {
+      padding: 0 5%;
+    }
+    
+    .container {
+      max-width: 800px;
     }
 }
 
