fix h4 font weight

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-        body {
+        body, h4 {
             font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-            font-weight: 300;
+            font-weight: 300!important;
         }
+
+.showTitle > h4 {
+    
+}
       
         #wrapper {
           height: 100vh;
