--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
       
         #wrapper {
-          min-height: height: 100vh;
+          height: 100vh;
         }
         
         header {
