--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,17 @@
         }
       
         #homeWrapper {
-            height: 100vh;
-            justify-content: space-between;
+            height: auto;
+            min-height: 100vh;
+            /* justify-content: space-between; */
         }
 
-        @media (min-width: 800px)  {
+        /* @media (min-width: 800px)  {
             #homeWrapper {
                 height: auto;
                 justify-content: flex-start;
             }
-        }
+        } */
 
         header {
             line-height: 1.3;
@@ -36,7 +37,7 @@
               font-size: 2.5rem;
         }
             
-            .container {
+            .container-fluid {
               max-width: 1200px;
             }
         }
