--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-        body, h4 {
+        body, h4, button {
             font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-weight: 300!important;
         }
