--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,23 @@
             color: rgba(0,0,0,1);
             border-bottom: 1px solid #000;
         }
-        
-        #demoVideo {
+
+        .btn {
+            padding-top: 0;
+            padding-bottom: .375rem;
+            padding-right: .75rem;
+            padding-left: .75rem;
+            font-size: .9rem;
+            border: none;
+        }
+
+        @media (min-width: 500px) {
+            .btn {
+                font-size: .8rem;
+            }
+        }
+
+        /* #demoVideo {
             display: none;
         }
         
@@ -83,7 +98,7 @@
         
         #slideshow.showing, #demoReel.showing {
             color: rgba(0,0,0,1);
-        }
+        } */
         
         footer {
             border-top: 1px solid #eee;
