trouble shooting prev next problems

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@
             border: none;
         }
 
+        .btn:focus {
+            box-shadow: none;
+        }
+
         @media (min-width: 500px) {
             .btn {
                 font-size: .8rem;
