--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,22 @@
         }
 
         #contactInfo p, #contactInfo h6 {
-            font-size: 1.05rem;
+            font-size: 1rem;
+        }
+
+        @media (min-width: 500px) {
+            #contactInfo p, #contactInfo h6 {
+                    font-size: 1.05rem;
+                }
         }
 
         header {
             line-height: 1.3;
+        }
+
+        footer {
+            border-top: 1px solid #eee;
+            font-size: .8rem;
         }
       
         .portfolio-header {
@@ -77,6 +88,11 @@
             border-bottom: 1px solid #000;
         }
 
+        a.currentPage {
+            color: rgba(0,0,0,0.8);
+            border-bottom: 1px solid rgba(0,0,0,0.8);
+        }
+
         .btn {
             padding-top: 0;
             padding-bottom: .375rem;
@@ -93,6 +109,51 @@
         @media (min-width: 500px) {
             .btn {
                 font-size: .9rem;
+            }
+        }
+
+        .overlay {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 100%;
+            width: 100%;
+            transition: .5s ease;
+            opacity: 1;
+        }
+        
+        .overlay:hover {
+            text-decoration: none;
+        }
+
+        @media (min-width: 500px) {
+            .overlay {
+                opacity: 0;
+            }
+            
+            .overlay:hover {
+                opacity: 1;
+            }
+        }
+
+       .title {
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 600;
+            letter-spacing: .4em;
+            margin: auto;
+            padding: .5rem 0;
+            border-bottom: 1px solid #fff;
+        }
+
+        @media (min-width: 500px) {
+            .title {
+                font-size: 1.05rem;
             }
         }
 
@@ -115,8 +176,3 @@
         #slideshow.showing, #demoReel.showing {
             color: rgba(0,0,0,1);
         } */
-        
-        footer {
-            border-top: 1px solid #eee;
-            font-size: .8rem;
-        }
